--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
+    "base64-sol": "^1.1.0",
     "dotenv": "^12.0.4",
     "hardhat": "^2.8.2"
   },
