--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "test": "jest --setupFiles dotenv/config",
     "start": "rm -rf ./src/build && tsc && node src/build/dist",
     "encode": "rm -rf ./src/build && tsc && node src/build/dist/logic/script/encode.js",
-
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/contracts-upgradeable": "^4.4.2",
+    "@openzeppelin/hardhat-upgrades": "^1.13.0",
     "base64-sol": "^1.1.0",
     "dotenv": "^12.0.4",
     "hardhat": "^2.8.2",
